--- a/src/resources/scss/_variables.scss
+++ b/src/resources/scss/_variables.scss
@@ -1,1 +1,12 @@
 $red-color: blue;
+$primary-color: #113685;
+$white-color: #fff;
+$black-color: #000;
+
+$color1: #213f70;
+$color2: #122548;
+$naranjo: #ffa409;
+
+$tablet: 1024px;
+$mobile: 768px;
+$laptop: 1224px;
