--- a/src/resources/views/login-user.hbs
+++ b/src/resources/views/login-user.hbs
@@ -4,87 +4,184 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
-        rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <title>Trường THPT Phù Cát 3</title>
+
     <link rel="stylesheet" href="/css/app.css" />
     <link rel="stylesheet" href="/vendor/eggy-js/css/eggy.css" />
     <link rel="stylesheet" href="/vendor/eggy-js/css/progressbar.css" />
     <link rel="stylesheet" href="/vendor/eggy-js/css/theme.css" />
+
 </head>
 
 <body>
-    <div class="container-fluid background">
-        <div class="row align-items-center justify-content-center h-100">
-            <div class="col-md-4 row-container">
-                <form action="/login" method="POST">
-                    <div class="text-center"><img class="rounded-3" src="/img/trangchu.jpg" width="44" height="44" />
-                        <h3 class="fw-bold mt-4 mb-5">Đăng nhập</h3>
+    <div class="cont">
+        <div class="demo">
+            <div class="login">
+                <div class="login__check"></div>
+                <div class="login__form">
+                    <div class="login__row">
+                        <svg class="login__icon name svg-icon" viewBox="0 0 20 20">
+                            <path d="M0,20 a10,8 0 0,1 20,0z M10,0 a4,4 0 0,1 0,8 a4,4 0 0,1 0,-8" />
+                        </svg>
+                        <input type="text" class="login__input name" placeholder="Username" />
                     </div>
-                    <div class="form-field"><input class="form-input" placeholder=" " type="email" name="email" value=""
-                            autocomplete="off" /><label class="form-label">Email</label></div>
-                    <div class="form-field"><input class="form-input" placeholder=" " type="password" name="password"
-                            value="" autocomplete="off" /><label class="form-label">Mật khẩu</label></div>
-                    <div class="form-check d-flex align-items-center justify-content-between fs-7">
-                        <div><input class="form-check-input mt-0" id="rememberMe" type="checkbox" /><label
-                                class="form-check-label" for="rememberMe">Lưu đăng nhập</label></div><a
-                            class="form-check-label text-primary" href="/password/reset">Quên mật khẩu</a>
+                    <div class="login__row">
+                        <svg class="login__icon pass svg-icon" viewBox="0 0 20 20">
+                            <path d="M0,20 20,20 20,8 0,8z M10,13 10,16z M4,8 a6,8 0 0,1 12,0" />
+                        </svg>
+                        <input type="password" class="login__input pass" placeholder="Password" />
                     </div>
-                    <div class="d-grid mt-4"><button class="btn btn-primary" type="submit">Đăng nhập</button></div>
-                    <div class="text-center mt-4">
-                        <div class="fs-7"><span>Bạn chưa có tài khoản? </span><a class="text-primary" type="button"
-                                data-bs-toggle="modal" data-bs-target="#registerModal">Đăng ký</a>
-                            <div class="modal fade" id="registerModal" tabindex="-1"
-                                aria-labelledby="registerModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" style="transition: all 0.3s ease">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="registerModalLabel">Bạn muốn đăng ký tài khoản?
-                                            </h5><button class="btn-close" type="button" data-bs-dismiss="modal"
-                                                aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body text-start fs-6">
-                                            <p>Vui lòng liên hệ admin qua địa chỉ email: pc3@gmail.com</p>
-                                            <p>Hotline hỗ trợ: 0398412xxx</p>
-                                            <p>Cảm ơn!</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                    <button type="button" class="login__submit">Sign in</button>
+                    <p class="login__signup">Don't have an account? &nbsp;<a>Sign up</a></p>
+                </div>
+            </div>
+            <div class="app">
+                <div class="app__top">
+                    <div class="app__menu-btn">
+                        <span></span>
+                    </div>
+                    <svg class="app__icon search svg-icon" viewBox="0 0 20 20">
+                        <!-- yeap, its purely hardcoded numbers straight from the head :D (same for svg above) -->
+                        <path d="M20,20 15.36,15.36 a9,9 0 0,1 -12.72,-12.72 a 9,9 0 0,1 12.72,12.72" />
+                    </svg>
+                    <p class="app__hello">Good Morning!</p>
+                    <div class="app__user">
+                        <img src="//s3-us-west-2.amazonaws.com/s.cdpn.io/142996/profile/profile-512_5.jpg" alt=""
+                            class="app__user-photo" />
+                        <span class="app__user-notif">3</span>
+                    </div>
+                    <div class="app__month">
+                        <span class="app__month-btn left"></span>
+                        <p class="app__month-name">March</p>
+                        <span class="app__month-btn right"></span>
+                    </div>
+                </div>
+                <div class="app__bot">
+                    <div class="app__days">
+                        <div class="app__day weekday">Sun</div>
+                        <div class="app__day weekday">Mon</div>
+                        <div class="app__day weekday">Tue</div>
+                        <div class="app__day weekday">Wed</div>
+                        <div class="app__day weekday">Thu</div>
+                        <div class="app__day weekday">Fri</div>
+                        <div class="app__day weekday">Sad</div>
+                        <div class="app__day date">8</div>
+                        <div class="app__day date">9</div>
+                        <div class="app__day date">10</div>
+                        <div class="app__day date">11</div>
+                        <div class="app__day date">12</div>
+                        <div class="app__day date">13</div>
+                        <div class="app__day date">14</div>
+                    </div>
+                    <div class="app__meetings">
+                        <div class="app__meeting">
+                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/profile/profile-80_5.jpg"
+                                alt="" class="app__meeting-photo" />
+                            <p class="app__meeting-name">Feed the cat</p>
+                            <p class="app__meeting-info">
+                                <span class="app__meeting-time">8 - 10am</span>
+                                <span class="app__meeting-place">Real-life</span>
+                            </p>
                         </div>
-                        <hr />
+                        <div class="app__meeting">
+                            <img src="//s3-us-west-2.amazonaws.com/s.cdpn.io/142996/profile/profile-512_5.jpg" alt=""
+                                class="app__meeting-photo" />
+                            <p class="app__meeting-name">Feed the cat!</p>
+                            <p class="app__meeting-info">
+                                <span class="app__meeting-time">1 - 3pm</span>
+                                <span class="app__meeting-place">Real-life</span>
+                            </p>
+                        </div>
+                        <div class="app__meeting">
+                            <img src="//s3-us-west-2.amazonaws.com/s.cdpn.io/142996/profile/profile-512_5.jpg" alt=""
+                                class="app__meeting-photo" />
+                            <p class="app__meeting-name">FEED THIS CAT ALREADY!!!</p>
+                            <p class="app__meeting-info">
+                                <span class="app__meeting-time">This button is just for demo ></span>
+                            </p>
+                        </div>
                     </div>
-                </form>
+                </div>
+                <div class="app__logout">
+                    <svg class="app__logout-icon svg-icon" viewBox="0 0 20 20">
+                        <path d="M6,3 a8,8 0 1,0 8,0 M10,0 10,12" />
+                    </svg>
+                </div>
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <script src="/vendor/eggy-js/js/eggy.js"></script>
-    <script>// toast message
-        let msgToastError = '';
-        if (msgToastError != '') {
-            Eggy({
-                title: 'Oops... Có gì đó không đúng',
-                message: msgToastError,
-                type: 'warning',
-                duration: 5000,
-            });
-        }
 
-        let msgToastSuccess = '';
-        if (msgToastSuccess != '') {
-            Eggy({
-                title: 'Thành công',
-                message: msgToastSuccess,
-                type: 'success',
-                duration: 5000,
+
+
+    <style>
+
+    </style>
+
+
+    <script>
+        $(document).ready(function () {
+
+            var animating = false,
+                submitPhase1 = 1100,
+                submitPhase2 = 400,
+                logoutPhase1 = 800,
+                $login = $(".login"),
+                $app = $(".app");
+
+            function ripple(elem, e) {
+                $(".ripple").remove();
+                var elTop = elem.offset().top,
+                    elLeft = elem.offset().left,
+                    x = e.pageX - elLeft,
+                    y = e.pageY - elTop;
+                var $ripple = $("<div class='ripple'></div>");
+                $ripple.css({ top: y, left: x });
+                elem.append($ripple);
+            };
+
+            $(document).on("click", ".login__submit", function (e) {
+                if (animating) return;
+                animating = true;
+                var that = this;
+                ripple($(that), e);
+                $(that).addClass("processing");
+                setTimeout(function () {
+                    $(that).addClass("success");
+                    setTimeout(function () {
+                        $app.show();
+                        $app.css("top");
+                        $app.addClass("active");
+                    }, submitPhase2 - 70);
+                    setTimeout(function () {
+                        $login.hide();
+                        $login.addClass("inactive");
+                        animating = false;
+                        $(that).removeClass("success processing");
+                    }, submitPhase2);
+                }, submitPhase1);
             });
-        }  </script>
+
+            $(document).on("click", ".app__logout", function (e) {
+                if (animating) return;
+                $(".ripple").remove();
+                animating = true;
+                var that = this;
+                $(that).addClass("clicked");
+                setTimeout(function () {
+                    $app.removeClass("active");
+                    $login.show();
+                    $login.css("top");
+                    $login.removeClass("inactive");
+                }, logoutPhase1 - 120);
+                setTimeout(function () {
+                    $app.hide();
+                    animating = false;
+                    $(that).removeClass("clicked");
+                }, logoutPhase1);
+            });
+
+        });
+    </script>
 </body>
 
 </html>
