--- a/src/resources/scss/_button.scss
+++ b/src/resources/scss/_button.scss
@@ -27,9 +27,9 @@
     }
 }
 
-.btn.btn-primary {
-    background: $primary-color;
-}
+// .btn.btn-primary {
+//     background: $primary-color;
+// }
 
 .btn.btn-outline-primary {
     border: 2px solid $white-color;
