--- a/src/resources/scss/_variables.scss
+++ b/src/resources/scss/_variables.scss
@@ -1,12 +1,18 @@
-$red-color: blue;
-$primary-color: #113685;
+$red-color: rgb(255, 38, 0);
+$primary-color: #472D2D;
 $white-color: #fff;
 $black-color: #000;
 
 $color1: #213f70;
 $color2: #122548;
-$naranjo: #ffa409;
+$naranjo: #38E54D;
 
 $tablet: 1024px;
 $mobile: 768px;
 $laptop: 1224px;
+
+
+
+
+
+
