--- a/src/resources/scss/_main.scss
+++ b/src/resources/scss/_main.scss
@@ -198,9 +198,9 @@
     }
 
     .competition {
-        padding-left: 40px;
-        padding-top: 36px;
-        padding-bottom: 36px;
+        // padding-left: 40px;
+        padding-top: -36px;
+        // padding-bottom: 36px;
 
         @import "./quiz";
 
@@ -837,7 +837,7 @@
 
             .notes {
                 max-width: 750px;
-                color: #ffd839;
+                color: #050505;
             }
         }
     }
