--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,5 +1,5 @@
 @import 'variables';
-@import 'toast';
+
 
 
 @mixin mobile {
@@ -30,7 +30,20 @@
     border-radius: 50%;
     margin-right: 4px;
 }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
 
+html {
+    scroll-behavior: smooth;
+}
+
+::selection {
+    background: rgba(200, 200, 200, 0.99);
+}
 .main-datatable>thead>tr>th {
     border-bottom-width: 0;
     color: #443f3f;
@@ -76,4 +89,8 @@ div.dataTables_wrapper div.dataTables_filter input {
 @import './main';
 @import "./button";
 @import "./sidebar";
-@import "./login"
+@import "./login";
+
+@import "./reset";
+@import "./header";
+@import "./quiz";
