--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -15,44 +15,49 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
-
-    {{!-- sử dụng scss trong bài --}}
-    <link rel="stylesheet" href="/css/app.css" />
-    <link rel="stylesheet" href="/vendor/eggy-js/css/eggy.css" />
-    <link rel="stylesheet" href="/vendor/eggy-js/css/progressbar.css" />
-    <link rel="stylesheet" href="/vendor/eggy-js/css/theme.css" />
-
-    {{!-- css boostrap --}}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous">
-    </script>
-
-
     {{!-- jquery vs iconicons --}}
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-
-
+    
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+    {{!-- sử dụng scss trong bài --}}
+    <link rel="stylesheet" href="/css/app.css" />
+    <link rel="stylesheet" href="/vendor/eggy-js/css/eggy.css" />
+    <link rel="stylesheet" href="/vendor/eggy-js/css/progressbar.css" />
+    <link rel="stylesheet" href="/vendor/eggy-js/css/theme.css" />
+    <script src="/vendor/eggy-js/js/eggy.js"></script>
+    <script src="/vendor/ckeditor.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <link rel="stylesheet" href="/vendor/jqmath/jqmath-0.4.3.css">
+    <script src="/vendor/jqmath/jqmath-etc-0.4.6.min.js" charset="utf-8"></script>
 
 
 
 </head>
-
 <body>
     <div class="app">
-
         {{> header}}
-
         <div class="main">
             {{{body}}}
         </div>
-
         {{> footer}}
     </div>
-
+        {{!-- script boostrap --}}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous">
+    </script>
+    <script src="/vendor/jquery.stopwatch.js"></script>
+    <script type="text/javascript" src="/js/app.js"></script>
 </body>
 
 </html>
+
+
+
+
