--- a/src/resources/views/competition/detail.hbs
+++ b/src/resources/views/competition/detail.hbs
@@ -8,7 +8,7 @@
                             {{#each room}}
                                 <img class="rounded-circle" src="{{this.avatar}}" width="100" height="100" style="object-fit: cover">
                                 <div class="ms-4">
-                                    <span class="text-warning fw-bold">Chủ phòng</span>
+                                    <span class="text-success fw-bold">Chủ phòng</span>
                                     <span class="d-block mt-2">{{this.master}}</span>
                                 </div>
                             {{/each}}
@@ -45,7 +45,7 @@
                                         <div class="d-flex align-items-center">
                                             <img src="{{avatar}}" width="100" height="100" style='object-fit: cover' class="rounded-circle">
                                             <div class="ms-4">
-                                                <span class="text-warning fw-bold">Thành viên</span>
+                                                <span class="text-success fw-bold">Thành viên</span>
                                                 <span class="d-block mt-2">{{fullname}}</span>
                                             </div>
                                         </div>
@@ -96,11 +96,12 @@
                 <span class="text-uppercase fs-7"></span>
             </div>
             <button class="d-flex align-items-center btn btn-secondary mt-4" data-bs-toggle="modal" data-bs-target="#outRoomModal">Rời phòng</button>
-            <div class="notes fw-bold fs-5 mt-5">
+            {{!-- <div class="notes fw-bold fs-5 mt-5">
                 <p>Bạn nên biết:</p>
                 <div class="ms-4">
                     <p>1. Trong vòng 30s phải hoàn thành câu hỏi.</p>
-                    <p>2. Thành viên trả lời đúng đầu tiên được cộng 20 điểm, đúng thứ hai sẽ được cộng 15 điểm và từ thứ 3 trở đi sẽ được cộng 10 điểm.</p><p>3. Hãy tập trung vì sau khi thành viên cuối cùng trả lời câu hỏi thì hệ thống sẽ tự động chuyển sang câu hỏi tiếp theo.</p>
+                    <p>2. Thành viên trả lời đúng đầu tiên được cộng 20 điểm.</p>
+                    <p>3. Hãy tập trung vì sau khi thành viên cuối cùng trả lời câu hỏi thì hệ thống sẽ tự động chuyển sang câu hỏi tiếp theo.</p>
                 </div>
                 <p class="d-flex align-items-center">
                     Chúc các bạn thi đấu vui vẻ
@@ -110,7 +111,7 @@
                         <ion-icon class="fs-5 md hydrated" name="happy" role="img" aria-label="happy"></ion-icon>
                     </span>
                 </p>
-            </div>
+            </div> --}}
         </div>
     </div>
     <div class="modal fade" id="outRoomModal" tabindex="-1" aria-labelledby="outRoomModalLabel" style="display: none;" aria-hidden="true">
